feature: experimental rhai scripting support
Signed-off-by: Nick Gerakines <12125+ngerakines@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 lto = true
 strip = true
 
+[features]
+default = []
+rhai = ["dep:rhai"]
+
 [dependencies]
 anyhow = "1.0.88"
 async-trait = "0.1.82"
@@ -38,3 +42,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono", "
 tracing = { version = "0.1.40", features = ["async-await", "log", "valuable"] }
 zstd = "0.13.2"
 reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls"] }
+rhai = { version = "1.20.0", features = ["serde", "std", "sync"], optional = true}
