refactor: Cleaned up and refactored matchers
Signed-off-by: Nick Gerakines <12125+ngerakines@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ strip = true
 
 [features]
 default = []
-rhai = ["dep:rhai"]
 
 [dependencies]
 anyhow = "1.0.88"
@@ -42,4 +41,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono", "
 tracing = { version = "0.1.40", features = ["async-await", "log", "valuable"] }
 zstd = "0.13.2"
 reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls"] }
-rhai = { version = "1.20.0", features = ["serde", "std", "sync"], optional = true}
+rhai = { version = "1.20.0", features = ["serde", "std", "sync"]}
