--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ tracing = { version = "0.1.40", features = ["async-await", "log", "valuable"] }
 zstd = "0.13.2"
 reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls"] }
 rhai = { version = "1.20.0", features = ["serde", "std", "sync"]}
+duration-str = "0.11.2"
