--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,4 @@ zstd = "0.13.2"
 reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls"] }
 rhai = { version = "1.20.0", features = ["serde", "std", "sync"]}
 duration-str = "0.11.2"
+fnv_rs = "0.4.3"
