examples: Added examples for users, private users, engagement, and tags. But for real.
Signed-off-by: Nick Gerakines <12125+ngerakines@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ Cargo.lock
 *.pdb
 
 # Project specific files
-config.yml
-development.db
+/config.yml
+/development.db
 jetstream_zstd_dictionary
 testdata/local_*
 
