Fork from Supercell - rebrand to Timeline Filter
- Update README with timeline filtering features and attribution
- Update LICENSE to include both copyrights (Lucas + Astrenox Cooperative)
- Rename package from 'supercell' to 'timeline-filter' in Cargo.toml
- Add documentation for new per-user timeline polling architecture

This project is based on Supercell by The Astrenox Cooperative.
See: https://github.com/astrenoxcoop/supercell

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "supercell"
-version = "0.5.2"
+name = "timeline-filter"
+version = "0.1.0"
 edition = "2021"
 
 [profile.release]
