--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ EXTERNAL_BASE=https://your-feed-generator.com
 # Database
 DATABASE_URL=sqlite://timeline-filter.db
 
-# Timeline Filter Settings (NEW)
+# Timeline Filter Settings
 # Path to timeline feeds YAML configuration file
 TIMELINE_FEEDS=timeline_feeds.yml
 
@@ -18,15 +18,6 @@ TIMELINE_CONSUMER_ENABLE=true
 # Global poll interval for all users (can be overridden per-user)
 # Format: "10s", "30s", "1m", "5m", etc.
 POLL_INTERVAL=30s
-
-# Jetstream Consumer Settings (OPTIONAL - for backward compatibility)
-# Only needed if you also want to run Jetstream-based feeds
-CONSUMER_TASK_ENABLE=false
-JETSTREAM_HOSTNAME=jetstream2.us-east.bsky.network
-COMPRESSION=false
-# ZSTD_DICTIONARY=data/zstd_dictionary  # Only if COMPRESSION=true
-# FEEDS=feeds.yml  # Only if CONSUMER_TASK_ENABLE=true
-COLLECTIONS=app.bsky.feed.post
 
 # Cache Settings
 CACHE_TASK_ENABLE=true
