--- a/.env.example
+++ b/.env.example
@@ -24,12 +24,13 @@ CLEANUP_TASK_ENABLE=true
 CLEANUP_TASK_INTERVAL=1h
 CLEANUP_TASK_MAX_AGE=48h
 
+# User Agent (required)
+# Format: "your-service-name (version; +https://your-repo-url)"
+USER_AGENT=timeline-filter (1.0.0; +https://github.com/YOUR-USERNAME/timeline-filter)
+
 # Logging
 # RUST_LOG=timeline_filter=debug,info
 RUST_LOG=info
-
-# Optional: Custom User Agent
-# USER_AGENT=timeline-filter (version; +https://github.com/YOUR-USERNAME/timeline-filter)
 
 # Optional: Custom CA Certificate Bundles (semicolon-separated)
 # CERTIFICATE_BUNDLES=/path/to/cert1.pem;/path/to/cert2.pem
