--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DATABASE_URL=sqlite://timeline-filter.db
 
 # Timeline Filter Settings
 # Path to timeline feeds YAML configuration file
-TIMELINE_FEEDS=timeline_feeds.yml
+TIMELINE_FEEDS=config.yml
 
 # Enable/disable timeline consumer (default: true)
 TIMELINE_CONSUMER_ENABLE=true
